2011-03-14  Roland Levillain  <roland@lrde.epita.fr>

	Add routines to identify and detach (collapse) simple pairs.

	* mln/topo/is_simple_pair.hh,
	* mln/topo/detach_pair.hh:
	New.
	* tests/topo/is_simple_pair.cc,
	* tests/topo/detach_pair.cc:
	New tests.
	* tests/topo/Makefile.am (check_PROGRAMS): Add is_simple_pair and
	detach_pair.
	(detach_pair_SOURCES, is_simple_pair_SOURCES): New.
	(MOSTLYCLEANFILES): New.  Add detach_pair-out.vtk.

2011-03-01  Roland Levillain  <roland@lrde.epita.fr>

	Add preliminary VTK input for binary images.

	* mln/io/vtk/load.hh: New file.
	Include it...
	* mln/io/vtk/all.hh: ...here.
	* tests/io/vtk/load_bin.cc,
	* tests/io/vtk/load_save_bin.cc:
	New.
	* tests/io/vtk/Makefile.am (check_PROGRAMS): Add load_bin and
	load_save_bin.
	(load_bin_SOURCES, load_save_bin_SOURCES): New.
	(MOSTLYCLEANFILES): Add load_save_bin-out.vtk.

2011-03-01  Roland Levillain  <roland@lrde.epita.fr>

	Add VTK-format meshes.

	* mesh/tetrahedron.vtk,
	* mesh/pseudo-manifold.vtk:
	New.
	* mesh/Makefile.am (dist_mesh_DATA): Add tetrahedron.vtk and
	pseudo-manifold.vtk.

2011-03-01  Roland Levillain  <roland@lrde.epita.fr>

	Add a pre-allocation routine to mln::geom::complex_geometry.

	* mln/geom/complex_geometry.hh
	(mln::geom::complex_geometry<D, P>::reserve): New.
	Use it...
	* mln/io/off/load.hh: ...here.
	Aesthetic changes.

2011-02-25  Roland Levillain  <roland@lrde.epita.fr>

	Small corrections in apps/mesh-segm-skel.

	* apps/mesh-segm-skel/test-mesh-complex-max-curv-extrema.in:
	Add a missing copyright header.

2011-02-24  Roland Levillain  <roland@lrde.epita.fr>

	Exercise topology-related routines.

	* tests/core/image/complex_image.hh
	(make_test_bin_2complex_image2d): New function.
	* tests/topo/is_facet.cc,
	* tests/make/detachment.cc,
	* tests/make/attachment.cc:
	New.
	* tests/topo/Makefile.am (check_PROGRAMS): Add is_facet.
	(is_facet_SOURCES): New.
	* tests/make/Makefile.am (check_PROGRAMS): Add attachment and
	detachment.